Follow code analysis